--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
   </head>
   <body>
   <div id="notes">
-    <h1 id="title">
-      NOTES FROM THE EDITOR
-    </h1>
+    <div id="Union">
+      <h1 id="journal">
+        UNION
+      </h1>
+      <h1 id="num">
+        #2
+      </h1>
+    </div>
+    <h2 id="title">
+      Notes from the Editors
+    </h2>
     <p id="content" >
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec accumsan imperdiet mi. Curabitur pharetra eleifend risus eget venenatis. Praesent magna leo, maximus nec ligula eget, rutrum consectetur mauris. Sed porta vel neque vel euismod. Duis mattis, nibh vitae fermentum eleifend, libero diam dapibus lorem, id scelerisque tortor mi at ex. Suspendisse quis dolor ligula. Curabitur tincidunt dapibus ornare. Vestibulum non augue accumsan, molestie magna non, interdum nunc. Nullam ac justo quis enim lobortis pellentesque in id felis. Mauris porta, libero in eleifend gravida, nibh arcu sollicitudin odio, eget tincidunt ipsum diam at magna. Vestibulum mattis lobortis mauris, vel ultrices ante laoreet a. Nulla hendrerit blandit justo non sollicitudin. Integer sed ullamcorper velit. Praesent in lectus vehicula, interdum elit sit amet, lacinia est. Phasellus rutrum eget neque et auctor. Integer nec sapien accumsan, suscipit quam in, congue augue.
 
