--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>About</title>
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="style.css" />
   </head>
