--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
   <div id="notes">
     <div id="Union">
       <h1 id="journal">
-        UNION
+        Union
       </h1>
       <h1 id="num">
         #2
       </h1>
     </div>
     <h2 id="title">
-      Notes from the Editors
+      Note from the Editors
     </h2>
     <p id="content" >
+
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec accumsan imperdiet mi. Curabitur pharetra eleifend risus eget venenatis. Praesent magna leo, maximus nec ligula eget, rutrum consectetur mauris. Sed porta vel neque vel euismod. Duis mattis, nibh vitae fermentum eleifend, libero diam dapibus lorem, id scelerisque tortor mi at ex. Suspendisse quis dolor ligula. Curabitur tincidunt dapibus ornare. Vestibulum non augue accumsan, molestie magna non, interdum nunc. Nullam ac justo quis enim lobortis pellentesque in id felis. Mauris porta, libero in eleifend gravida, nibh arcu sollicitudin odio, eget tincidunt ipsum diam at magna. Vestibulum mattis lobortis mauris, vel ultrices ante laoreet a. Nulla hendrerit blandit justo non sollicitudin. Integer sed ullamcorper velit. Praesent in lectus vehicula, interdum elit sit amet, lacinia est. Phasellus rutrum eget neque et auctor. Integer nec sapien accumsan, suscipit quam in, congue augue.
 
       Mauris pellentesque mattis sem in bibendum. Proin fringilla pretium mauris, sed semper odio. Donec mollis efficitur felis, et sagittis neque rhoncus vel. Proin eget aliquam ante, vulputate sodales quam. Ut at velit consectetur enim congue accumsan ac eget sapien. Maecenas nec erat nec libero egestas sagittis. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Ut id mi lacus. Fusce pulvinar, ex ut ornare ultrices, quam ligula dapibus nibh, et faucibus ipsum ante eget metus. Curabitur ac pharetra arcu, a interdum ex. Morbi in vestibulum orci, non iaculis lectus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean malesuada nulla a velit tincidunt, nec lacinia neque pharetra. Donec imperdiet est est, eu lobortis mauris mollis at. Praesent consequat vestibulum dui, nec pretium neque consectetur vitae. Proin pretium sem sit amet erat tristique, ut maximus tellus interdum.
