--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       Note from the Editors
     </h2>
     <p id="content" >
-      <i>no wrong way to play </i> <br />
+      <span class="nfe"><i>no wrong way to play </i> <br /> </span>
       <br />
       <i>SANDBOX</i> reconsiders the ways in which we consume content—how we engage with websites based on headlines, subheadlines, and bylines—and how through the removal of these crucial parts we can create a level playing field that puts us back into a space of production through reading. <br />
       <br />
